# AWSome-Enum

./: .gitignore  README.md  awesome_enum.sh  awsome_enum.sh  interesting_permissions.json  pyproject.toml
src/awsome_enum/: __init__.py  enumerator-old.py  enumerator.py  main.py  service_subcommands.py  utils.py
src/awsome_enum/services/: __init__.py  aws_service_interface.py  codebuild.py  cognito.py  ec2.py  ecr.py  ecs.py  efs.py  elasticbeanstalk.py  eventbridgescheduler.py  iam.py  kms.py  lambda_service.py  lightsail.py  rds.py  s3.py  secretsmanager.py  sns.py  sqs.py  stepfunctions.py
